--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -1,15 +1,34 @@
 $yellow: #ff7812;
 $fontColor: #333;
 $blurColor: #40a9ff;
+$contentWidth: 1200px;
+.pleaseLogin {
+    text-align: center;
+    color: #666;
+    padding-top: 20%;
+}
+
+.container {
+    width: 100%;
+}
+
+.inner {
+    width: 100%;
+    margin: 0 auto;
+    @media only screen and (min-width: 1000px) {
+        width: $contentWidth;
+    }
+}
+
 .menu {
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1), 0 1px rgba(0, 0, 0, 0.1);
-    background: #fafafa;
+    background: #fff;
     border-top: 2px solid $blurColor;
     .menuBox {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 1200px;
+        width: $contentWidth;
         margin: 0 auto;
         .userBox a, .userBox button {
             margin-right: 10px;
@@ -62,7 +81,7 @@ $blurColor: #40a9ff;
     }
 }
 
-.inner {
+.bgGray {
     background: #f5f5f5;
     width: 100vm;
     height: 100vh;
@@ -72,6 +91,7 @@ $blurColor: #40a9ff;
     width: 100%;
     margin: 0 auto;
     background: #fff;
+    box-sizing: border-box;
     box-shadow: 0 0 5px #d9d9d9;
     position: absolute;
     left: 50%;
@@ -86,10 +106,15 @@ $blurColor: #40a9ff;
         background: #f5f5f5;
         padding: 12px 20px;
         border-bottom: 1px solid #d9d9d9;
+        margin-bottom: 0;
     }
     .card-content {
-        padding: 20px;
+        padding: 30px;
     }
+}
+
+.card_login {
+    padding: 30px;
 }
 
 .logo_box {
@@ -130,4 +155,124 @@ $blurColor: #40a9ff;
 
 .blueColor {
     color: $blurColor;
+}
+
+.noMatch {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -70%);
+    img {
+        width: 200px;
+    }
+    text-align: center;
+    h1 {
+        padding-top: 30px;
+    }
+}
+
+.loginTips {
+    text-align: center;
+    padding-top: 20%;
+}
+
+.headPic {
+    padding: 25px;
+    img {
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        border: 3px solid #fff;
+    }
+}
+
+.uploadPic {
+    position: relative;
+    padding: 0;
+    margin: 25px auto;
+    margin-bottom: 0;
+    overflow: hidden;
+    width: 120px;height: 120px;
+    border-radius: 50%;
+    img{border: none}
+    span {
+        position: absolute;
+        background: rgba(0, 0, 0, .6);
+        height: 32px;
+        line-height: 32px;
+        text-align: center;
+        color: #fff;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        display: none;
+        cursor: pointer;
+    }
+    &:hover span{
+        display: block;
+    }
+}
+
+.tc {
+    text-align: center
+}
+
+.userInfo {
+    color: #fff;
+    flex: 1;
+    p {
+        margin: 4px 0;
+        &:first-child {
+            color: $blurColor;
+            font-size: 24px;
+        }
+    }
+}
+
+.poster {
+    height: 250px;
+    margin: 10px 0;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+}
+
+.operateInner {
+    width: 10%;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 30px;
+    position: relative;
+}
+
+.setting {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    color: #fff;
+    font-size: 24px;
+}
+
+.innerBox {
+    padding: 20px;
+    padding-top: 0;
+    background: #fff;
+}
+
+.infoInner {
+    margin: 10px 0;
+    background: #fff;
+    padding: 20px;
+}
+
+.list {
+    ul li {
+        border-bottom: 1px solid #d9d9d9;
+        padding: 12px 0
+    }
 }
