--- a/src/static/css/reset.css
+++ b/src/static/css/reset.css
@@ -28,6 +28,7 @@ body {
 	-webkit-user-select: none;
 	-webkit-text-size-adjust: none;
 	color: #666;
+	background: #fff;
 	font-family: 'Lucida Grande', 'Helvetica', 'Microsoft yahei', 'STHeiti';
 }
 a, img {
@@ -57,7 +58,7 @@ input:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0 1000px white inset;
 	-webkit-text-fill-color: #333;
 }
-
+:root body{background: #f5f5f5}
 .icon {
    width: 1em; height: 1em;
    vertical-align: -0.15em;
