--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -24,30 +24,37 @@ $contentWidth: 1200px;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1), 0 1px rgba(0, 0, 0, 0.1);
     background: #fff;
     border-top: 2px solid $blurColor;
+
     .menuBox {
         display: flex;
         align-items: center;
         justify-content: space-between;
         width: $contentWidth;
         margin: 0 auto;
+
         .userBox a, .userBox button {
             margin-right: 10px;
         }
+
         .menuList {
             display: flex;
             align-items: center;
             font-size: 16px;
             margin: 0;
+
             li {
                 padding: 20px 0;
                 margin-right: 20px;
                 text-align: center;
                 box-shadow: inset 0 -1px 0px #e6e6e6;
+
                 a {
                     color: #333;
                 }
+
                 &.active {
                     box-shadow: inset 0 -1px 0px $blurColor;
+
                     a {
                         color: $blurColor;
                         text-decoration: none;
@@ -66,6 +73,7 @@ $contentWidth: 1200px;
 .userCenter {
     display: flex;
     align-items: center;
+
     em {
         color: $blurColor;
     }
@@ -101,6 +109,7 @@ $contentWidth: 1200px;
         width: 600px;
         top: 18%
     }
+
     .card-title {
         font-size: 16px;
         background: #f5f5f5;
@@ -108,6 +117,7 @@ $contentWidth: 1200px;
         border-bottom: 1px solid #d9d9d9;
         margin-bottom: 0;
     }
+
     .card-content {
         padding: 30px;
     }
@@ -123,6 +133,7 @@ $contentWidth: 1200px;
     top: -100px;
     text-align: center;
     width: 100%;
+
     h1 {
         color: #888;
     }
@@ -138,12 +149,9 @@ $contentWidth: 1200px;
     margin-bottom: 20px;
 }
 
-.red {
-    color: red;
-}
-
 .emailTips {
     padding-top: 20px;
+
     p {
         word-break: break-all
     }
@@ -162,10 +170,13 @@ $contentWidth: 1200px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -70%);
+
     img {
         width: 200px;
     }
+
     text-align: center;
+
     h1 {
         padding-top: 30px;
     }
@@ -178,6 +189,7 @@ $contentWidth: 1200px;
 
 .headPic {
     padding: 25px;
+
     img {
         border-radius: 50%;
         width: 120px;
@@ -192,9 +204,14 @@ $contentWidth: 1200px;
     margin: 25px auto;
     margin-bottom: 0;
     overflow: hidden;
-    width: 120px;height: 120px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
-    img{border: none}
+
+    img {
+        border: none
+    }
+
     span {
         position: absolute;
         background: rgba(0, 0, 0, .6);
@@ -208,7 +225,8 @@ $contentWidth: 1200px;
         display: none;
         cursor: pointer;
     }
-    &:hover span{
+
+    &:hover span {
         display: block;
     }
 }
@@ -220,8 +238,10 @@ $contentWidth: 1200px;
 .userInfo {
     color: #fff;
     flex: 1;
+
     p {
         margin: 4px 0;
+
         &:first-child {
             color: $blurColor;
             font-size: 24px;
@@ -276,6 +296,7 @@ $contentWidth: 1200px;
         padding: 12px 0
     }
 }
+
 #uploadPic {
     position: absolute;
     left: 0;
@@ -285,4 +306,572 @@ $contentWidth: 1200px;
     opacity: 0;
     cursor: pointer;
     height: 100%
+}
+
+.mainInner {
+    margin: 10px 0;
+    background: #fff;
+    position: relative;
+    padding: 10px 0;
+}
+
+.locBox {
+    padding: 20px;
+    position: absolute;
+    left: 0;
+    top: 5px;
+    z-index: 1001;
+}
+
+.loc {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+
+    svg {
+        font-size: 22px;
+    }
+
+    span {
+        font-size: 14px;
+        margin-left: 5px;
+    }
+}
+
+.contentBox {
+    width: 620px;
+}
+
+.tabs {
+    span {
+        width: calc(100% / 7);
+        display: inline-block;
+        box-sizing: border-box;
+        cursor: pointer;
+        padding: 5px 0;
+        float: left;
+        position: relative;
+        padding-left: 16px;
+
+        i {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+        em {
+            position: absolute;
+            left: 0;
+            cursor: default;
+        }
+    }
+
+    p {
+        margin: 0;
+        margin-bottom: 5px;
+        display: block;
+        clear: both
+    }
+}
+
+
+.movies-img {
+    height: 360px;
+    width: 100%
+}
+
+.movies-score {
+    text-align: center;
+    position: absolute;
+    right: 21px;
+    bottom: 47px;
+    font-size: 14px;
+    background: #52c41a;
+    color: #fff;
+    width: 24px;
+}
+
+.movies-text {
+    text-align: center;
+    font-size: 16px;
+    padding-top: 12px;
+    color: rgba(0, 0, 0, 0.65);
+}
+
+.more {
+    height: 20px;
+    position: relative;
+    margin: 0;
+    text-align: right;
+    padding-right: 20px;
+
+    a {
+        margin-top: -15px;
+        display: block;
+        width: 100%;
+        cursor: pointer;
+    }
+
+}
+
+.carousel-box {
+    padding: 20px 10px;
+}
+
+
+.movies-list li {;
+    float: left;
+    width: 25%;
+    box-sizing: border-box;
+    position: relative;
+
+    .movies-inner {
+        padding: 10px;
+        border: 1px solid #e8e8e8;
+        margin: 0 10px;
+        display: block;
+    }
+}
+
+.ant-carousel {
+    height: 475px;
+}
+
+.movies-dots {
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    li {
+        float: left;
+        margin: 0 5px;
+        display: flex;
+        justify-content: center;
+
+        button {
+            background: #cbcbcb;
+            width: 15px;
+            height: 5px;
+            text-indent: -999em;
+            border: none;
+            transition: all 0.25s;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        &.slick-active {
+            button {
+                background: $blurColor;
+                width: 30px;
+            }
+        }
+    }
+}
+
+.movies-icon {
+    position: absolute;
+    width: 72px;
+    height: 72px;
+    left: 21px;
+    display: block;
+    top: 11px;
+    background: url("../../static/images/allicon24.png") no-repeat -160px -344px;
+}
+
+.loading {
+    top: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    span {
+        display: block;
+        text-align: center;
+        color: rgba(0, 0, 0, .4);
+        margin-top: -10px;
+    }
+}
+
+.footer {
+    text-align: center;
+    padding: 20px;
+    background: #fff;
+    border-top: 1px solid #e8e8e8;
+}
+
+.spinner {
+    width: 70px;
+    height: 70px;
+}
+
+.movies-more {
+    text-align: center;
+    padding: 10px 0;
+
+    a {
+        background: #fff;
+        border-radius: 25px;
+        padding: 6px 10px;
+        color: #1890FF;
+        display: inline-block;
+        width: 120px;
+        transition: all 0.2s;
+        border: 1px solid #1890FF;
+
+        &:hover {
+            background: #40A9FF;
+            color: #fff;
+        }
+    }
+}
+
+.title {
+    text-align: center;
+    font-size: 16px;
+    padding: 10px;
+    border-bottom: 1px solid #e8e8e8;
+    margin-bottom: 10px;
+}
+
+.feature-movies {
+    padding: 10px 20px;
+}
+
+.m-pic {
+    margin: 0;
+
+    * {
+        margin: 0
+    }
+
+    dt {
+        float: left;
+        margin-right: 10px;
+
+        img {
+            width: 366px;
+            height: 262px;
+        }
+    }
+
+    dd {
+        float: left;
+        position: relative;
+
+        img {
+            width: 174px;
+            height: 126px;
+
+            &:first-child {
+                margin-bottom: 10px;
+            }
+        }
+
+        strong {
+            font-weight: normal;
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            width: 100%;
+            height: 126px;
+            text-align: center;
+            background: rgba(0, 0, 0, .6);
+            color: #fff;
+            line-height: 126px;
+            transition: all 0.2s ease-in-out 0s;
+
+            i {
+                font-size: 32px;
+            }
+        }
+
+        &:hover strong {
+            background: rgba(0, 0, 0, .4);
+        }
+    }
+
+}
+
+.f-title {
+    text-align: center;
+    font-size: 16px;
+    padding: 5px;
+    color: rgba(0, 0, 0, .65);
+}
+
+.main-title {
+    font-size: 40px;
+    line-height: 64px;
+    border-left: 8px solid $blurColor;
+    padding-left: 20px;
+    margin: 40px 0;
+
+}
+
+.pre-desc {
+    line-height: 180%;
+    font-size: 16px;
+
+    margin-bottom: 5px;
+}
+
+.main-feature-bg {
+    background: #fff;
+    border-top: 1px solid #e5e5e5;
+}
+
+.list-feature {
+    border-bottom: 1px solid #e8e8e8;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+
+    .circle {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background: #555;
+        text-align: center;
+        line-height: 60px;
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .color-1 {
+        background: #f85223
+    }
+
+    .color-2 {
+        background: #ff9600
+    }
+
+    .color-3 {
+        background: $blurColor
+    }
+
+    .list-con {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        img {
+            width: auto;
+            height: auto;
+            margin: 0 20px;
+        }
+
+        .text-box {
+            flex: 1;
+
+            .m-title {
+                border: none;
+                font-size: 18px;
+                padding-bottom: 5px;
+            }
+
+            .actors, .director {
+                padding: 1px 0
+            }
+
+            .director {
+                padding-bottom: 10px;
+            }
+        }
+    }
+}
+
+
+.feature-tabs > div {
+    margin-bottom: 0
+}
+
+.main-movies-img {
+    width: 380px;
+    height: 593px;
+}
+
+.m-title-1 {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.m-title-2 {
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+.m-title-3 {
+    margin: 0;
+    padding: 5px 8px;
+    background: rgba(0, 0, 0, .8);
+    color: #fff;
+    border-radius: 5px;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+.m-title {
+    line-height: 1.9
+}
+
+.summary {
+    max-height: 218px;
+    overflow: hidden;
+}
+
+.video-title {
+    padding-top: 10px;
+    color: $blurColor;
+
+    span {
+        font-size: 24px;
+    }
+}
+
+ul.img-list {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+
+    li {
+        margin-right: 10px;
+        width: 186.25px;
+        height: 124px;
+
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            img {
+                visibility: hidden
+            }
+        }
+
+        &:nth-child(4n) {
+            margin-right: 0;
+        }
+    }
+
+}
+
+
+.light-box-mask {
+    background: rgba(0, 0, 0, .65);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.2s ease-in-out 0s;
+
+    &.show {
+        visibility: visible;
+        opacity: 1;
+        transition: all 0.2s ease-in-out .15s;
+    }
+}
+
+.light-box-content {
+    width: 100%;
+    position: relative;
+    height: 100%;
+
+    .prev, .next {
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: #fff;
+
+        svg {
+            font-size: 10px;
+            width: 45px;
+            height: 45px;
+            fill: #e8e8e8;
+            transition: all 0.2s;
+        }
+
+        &:hover svg {
+            fill: #b6b6b6;
+        }
+    }
+
+    .prev {
+        left: 30px;
+    }
+
+    .next {
+        right: 30px;
+    }
+
+    ol {
+        height: 100%;
+        transition: all 0.2s ease-in-out 0s;
+        margin: 0;
+        padding: 0;
+        display: block;
+
+        li {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            float: left;
+            height: 100%;
+            position: relative;
+
+            div {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                img {
+                    width: auto;
+                    height: 90%;
+                    margin: 0 auto;
+                    display: block;
+                    border: 2px solid #fff;
+                }
+
+                p {
+                    color: #fff;
+                    text-align: center;
+                    margin: 0;
+                    height: 36px;
+                    line-height: 36px;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+}
+
+.light-box-close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    background: #e8e8e8;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 36px;
+    color: #333;
+    line-height: 32px;
+    z-index: 2;
+    cursor: pointer;
+
+    &:hover {
+        background: #b6b6b6
+    }
 }
