--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -671,6 +671,14 @@ $contentWidth: 1200px;
                 border: none;
                 font-size: 18px;
                 padding-bottom: 5px;
+
+                a {
+                    color: rgba(0, 0, 0, 0.65);
+
+                    &:hover {
+                        color: rgb(24, 144, 255);
+                    }
+                }
             }
 
             .actors, .director {
@@ -684,6 +692,65 @@ $contentWidth: 1200px;
     }
 }
 
+.award-title {
+    font-size: 18px;
+}
+
+.award-content {
+    flex: 1;
+    padding-left: 20px;
+    margin-left: 20px;
+    border-left: 1px solid #e6d8d8;
+
+    dt, dd {
+        h1 {
+            font-size: 16px;
+            margin-bottom: 0;
+        }
+
+        div {
+            display: flex;
+            align-items: center;
+
+            flex-wrap: wrap;
+
+            a {
+                width: 50%;
+                display: flex;
+                align-items: center;
+                margin: 15px 0;
+
+                img {
+                    margin-right: 15px;
+                    width: 68px;
+                    height: 100px;
+                }
+
+                p {
+                    flex: 1;
+                    font-size: 16px;
+                    margin: 0;
+                    color: rgba(0, 0, 0, 0.65);
+
+                    &:hover {
+                        color: rgb(24, 144, 255);
+                    }
+                }
+            }
+        }
+    }
+
+    dt div a {
+        width: 100%;
+
+    }
+}
+
+.pagination {
+    padding: 20px 0 10px 0;
+    display: flex;
+    justify-content: center;
+}
 
 .feature-tabs > div {
     margin-bottom: 0
@@ -720,6 +787,10 @@ $contentWidth: 1200px;
 
 .summary {
     max-height: 218px;
+    text-overflow: ellipsis;
+    display: -webkit-box; //作为弹性伸缩盒子模型显示。
+    -webkit-box-orient: vertical; //设置伸缩盒子的子元素排列方式--从上到下垂直排列
+    -webkit-line-clamp: 8;
     overflow: hidden;
 }
 
@@ -772,6 +843,7 @@ ul.img-list {
     visibility: hidden;
     opacity: 0;
     transition: all 0.2s ease-in-out 0s;
+    z-index: 9999;
 
     &.show {
         visibility: visible;
@@ -837,10 +909,10 @@ ul.img-list {
 
                 img {
                     width: auto;
-                    height: 90%;
+                    max-height: 90%;
                     margin: 0 auto;
                     display: block;
-                    border: 2px solid #fff;
+                    border: 3px solid #fff;
                 }
 
                 p {
@@ -875,3 +947,97 @@ ul.img-list {
         background: #b6b6b6
     }
 }
+
+.public-title {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    font-size: 16px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.comment-list {
+    display: flex;
+
+
+    .comment-avatar {
+        margin-right: 12px;
+        margin-top: 10px;
+    }
+
+    .comment-content {
+        flex: 1;
+        border-bottom: 1px dashed #e6d8d8;
+        padding-bottom: 8px;
+        position: relative;
+
+        .comment-text {
+            padding: 10px 0;
+        }
+
+        .comment-title {
+            padding-top: 15px;
+
+            span {
+                color: $blurColor
+            }
+
+        }
+
+        .comment-support {
+            position: absolute;
+            right: 0;
+            top: 12px;
+            display: flex;
+
+            align-items: center;
+
+            svg {
+                width: 1.4em;
+                height: 1.4em;
+                fill: #888;
+                cursor: pointer;
+            }
+            .isSupport{
+                fill: red;
+            }
+
+            span {
+                margin-left: 5px;
+                cursor: pointer;
+            }
+        }
+    }
+
+
+}
+
+.comment-editor {
+    button {
+        margin: 20px 0;
+    }
+}
+
+.no-comment {
+    text-align: center;
+    padding: 30px 0 20px 0;
+}
+
+.rate {
+    padding: 15px 0;
+
+    span {
+        margin-right: 15px;
+    }
+}
+
+.comment-editor button.comment-btn {
+    margin-top: 0;
+}
+
+.comment-rate {
+    .anticon svg {
+        font-size: 16px;
+    }
+}
+
+
