--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -2,6 +2,7 @@ $yellow: #ff7812;
 $fontColor: #333;
 $blurColor: #40a9ff;
 $contentWidth: 1200px;
+
 .pleaseLogin {
     text-align: center;
     color: #666;
@@ -15,6 +16,7 @@ $contentWidth: 1200px;
 .inner {
     width: 100%;
     margin: 0 auto;
+
     @media only screen and (min-width: 1000px) {
         width: $contentWidth;
     }
@@ -106,6 +108,7 @@ $contentWidth: 1200px;
     left: 50%;
     top: 17%;
     transform: translate(-50%, 0);
+
     @media only screen and (min-width: 1000px) {
         width: 600px;
         top: 18%;
@@ -493,12 +496,20 @@ $contentWidth: 1200px;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
     span {
         display: block;
         text-align: center;
         color: rgba(0, 0, 0, 0.4);
         margin-top: -10px;
+    }
+
+    .spinner {
+        display: block;
+        margin: 0 auto;
     }
 }
 
@@ -528,6 +539,7 @@ $contentWidth: 1200px;
         transition: all 0.2s;
         border: 1px solid #1890ff;
         cursor: pointer;
+
         &:hover {
             background: #40a9ff;
             color: #fff;
@@ -546,6 +558,7 @@ $contentWidth: 1200px;
 .feature-movies {
     padding: 10px 20px;
     padding-bottom: 0;
+
     .fm-list {
         cursor: pointer;
         position: relative;
@@ -555,20 +568,25 @@ $contentWidth: 1200px;
         margin-right: 20px;
         margin-bottom: 20px;
         overflow: hidden;
+
         &:first-child {
             width: 560px;
             height: 340px;
+
             img {
                 height: 340px;
             }
+
             .f-title span {
                 font-size: 50px;
             }
         }
+
         &:nth-of-type(3),
         &:nth-of-type(5) {
             margin-right: 0;
         }
+
         .f-title {
             background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.7));
             position: absolute;
@@ -581,6 +599,7 @@ $contentWidth: 1200px;
             padding-left: 20px;
             text-align: left;
             color: #fff;
+
             span {
                 font-size: 30px;
             }
@@ -799,7 +818,7 @@ $contentWidth: 1200px;
     justify-content: center;
 }
 
-.feature-tabs > div {
+.feature-tabs>div {
     margin-bottom: 0;
 }
 
@@ -1079,6 +1098,7 @@ ul.img-list {
                 margin-left: 5px;
                 cursor: pointer;
             }
+
             &:hover {
                 fill: red;
             }
@@ -1213,6 +1233,7 @@ ul.img-list {
             padding: 0 15px;
             flex-direction: column;
             justify-content: center;
+
             h1 {
                 span {
                     border: 1px solid #d56b97;
